--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -80,16 +80,16 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li>
-                  <a href="{{ path( 'cisco_audits' ) }}">view audit list</a>
+                  <a href="{{ path( 'audits' ) }}">view audit list</a>
               </li>
               <li>
-                  <a href="{{ path( 'cisco_auditforms' ) }}">view form list</a>
+                  <a href="{{ path( 'audit_forms' ) }}">view form list</a>
               </li>
               <li>
-                  <a href="{{ path( 'cisco_auditsections' ) }}">view section list</a>
+                  <a href="{{ path( 'audit_sections' ) }}">view section list</a>
               </li>
               <li>
-                  <a href="{{ path( 'cisco_auditfields' ) }}">view field list</a>
+                  <a href="{{ path( 'audit_fields' ) }}">view field list</a>
               </li>
             </ul>
           </div><!--/.nav-collapse -->
