--- a/Resources/views/Form/edit.html.twig
+++ b/Resources/views/Form/edit.html.twig
@@ -83,7 +83,8 @@
                 </tr>
             </thead>
             <tbody>
-            {% for section in auditform.sections %}
+            {% for rel1 in auditform.sectionRelations %}
+            {% set section = rel1.section %}
                 {% include 'CiscoSystemsAuditBundle:Section:_load.html.twig' %}
             {% else %}
                 <tr class="warning-empty">
