added getPosition on Field and Section with twig filter

--- a/Resources/views/Form/view.html.twig
+++ b/Resources/views/Form/view.html.twig
@@ -46,7 +46,7 @@
             </thead>
             <tbody>
             {% set counter = 1 %}
-            {% for section in form.sectionRelations %}
+            {% for section in form.sections %}
                 <tr>
                     <td colspan=4>
                         <strong>Section {{ section.position }}: {{ section.title }}</strong> - {{ section.description }}
