--- a/Resources/views/Section/edit.html.twig
+++ b/Resources/views/Section/edit.html.twig
@@ -78,8 +78,7 @@
                 </tr>
             </thead>
             <tbody>
-            {% for rel in section.fieldRelations %}
-                {% set field = rel.field %}
+            {% for field in section.fields %}
                 {% include 'CiscoSystemsAuditBundle:Field:_load.html.twig' %}
             {% else %}
                 <tr class="warning-empty">
