--- a/Resources/views/Form/view.html.twig
+++ b/Resources/views/Form/view.html.twig
@@ -49,7 +49,7 @@
             {% for section in form.sections %}
                 <tr>
                     <td colspan=4>
-                        <strong>Section {{ section.position }}: {{ section.title }}</strong> - {{ section.description }}
+                        <strong>Section {{ section | position( form ) }}: {{ section.title }}</strong> - {{ section.description }}
                     </td>
                 </tr>
                 {% for field in section.fieldRelations %}
