--- a/Resources/views/Section/_load.html.twig
+++ b/Resources/views/Section/_load.html.twig
@@ -1,6 +1,6 @@
 <tr class="cisco-audit-section-row">
     <td colspan="4">
-        <strong>Section {{ loop.index }}: {{ section.title }}</strong>
+        <strong>Section {{ section | position ( auditform ) }}: {{ section.title }}</strong>
         {% if section.description is not empty %}
              - {{ section.description }}
         {%  else %}
@@ -23,8 +23,7 @@
         </div>
     </td>
 </tr>
-{% for rel2 in section.fieldRelations %}
-{% set field = rel2.field %}
+{% for field in section.fields %}
     {% include 'CiscoSystemsAuditBundle:Field:_load.html.twig' %}
 {% else %}
     <tr class="warning-empty">
