dealing with add/remove section on edit form template

--- a/Resources/views/Form/edit.html.twig
+++ b/Resources/views/Form/edit.html.twig
@@ -73,6 +73,7 @@
                 {% endif %}
             </div>
         </form>
+                {{ ladybug_dump( auditform.sections ) }}
 
         <table class="table table-condensed table-hover cisco-audit-table">
             <thead>
