--- a/Resources/views/Section/_ulist.html.twig
+++ b/Resources/views/Section/_ulist.html.twig
@@ -1,13 +1,13 @@
-<div class="cisco-audit-orphan-section">
-    <a class="btn btn-mini"
+<div class="cisco-audit-orphan-section row-fluid">
+    <a class="btn btn-primary btn-small"
        href="{{ path( 'audit_form_new_section', { 'form_id' : auditform.id } ) }}">
-        Create: new section <i class="icon-plus"></i>
+        Create: new section <i class="icon-plus icon-white"></i>
     </a>
 {% if usections is not empty and auditform.id is not null %}
     {% for section in usections %}
-    <a class="btn btn-mini cisco-audit-section-add"
+    <a class="btn btn-primary btn-small cisco-audit-section-add"
        href="{{ path( 'audit_form_add_section', { 'form_id' : auditform.id ,'section_id': section.id } ) }}">
-        Add: {{ section.title }} <i class="icon-plus"></i>
+        Add: {{ section.title }} <i class="icon-plus icon-white"></i>
     </a>
     {% endfor %}
 {% endif %}
