--- a/Resources/views/Section/_ulist.html.twig
+++ b/Resources/views/Section/_ulist.html.twig
@@ -1,4 +1,4 @@
-<div class="cisco-audit-orphan-section row-fluid">
+<div class="cisco-audit-orphan-section">
     <a class="btn btn-primary btn-small"
        href="{{ path( 'audit_form_new_section', { 'form_id' : auditform.id } ) }}">
         Create: new section <i class="icon-plus icon-white"></i>
