--- a/Resources/views/Section/edit.html.twig
+++ b/Resources/views/Section/edit.html.twig
@@ -76,7 +76,7 @@
                 </tr>
             </thead>
             <tbody>
-            {% for field in section.fields %}
+            {% for field in section | fields( false ) %}
                 {% include 'CiscoSystemsAuditBundle:Field:_load.html.twig' %}
             {% else %}
                 <tr class="warning-empty">
